E2E console app for f# working. next make it work for C# and then in IDC.

--- a/Hosts/Console/TddStud10App/MainWindow.xaml
+++ b/Hosts/Console/TddStud10App/MainWindow.xaml
@@ -3,11 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="269*"/>
-            <RowDefinition Height="50*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="textBlock" TextWrapping="Wrap" Text="" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="199,0,0,20" Grid.Row="1" Width="75" Height="20" VerticalAlignment="Bottom" Click="Button_Click"/>
+        <TextBox x:Name="textBlock" TextWrapping="Wrap" Text="" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.ColumnSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Right" Grid.Row="1" Width="75" Height="20" VerticalAlignment="Top" Click="Button_Click" Grid.Column="1"/>
+        <TextBox x:Name="solutionPath" Margin="0,0,0,-3" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Text="d:\src\r4nd0mkatas\fizzbuzz\FizzBuzz.sln"/>
     </Grid>
 </Window>
