--- a/incr/package/WorkspacePaneControl.xaml
+++ b/incr/package/WorkspacePaneControl.xaml
@@ -1,26 +1,33 @@
-﻿<UserControl x:Class="Microsoft.Samples.VisualStudio.IDE.ToolWindow.WorkspacePaneControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:vm="clr-namespace:Microsoft.Samples.VisualStudio.IDE.ToolWindow.ViewModel"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
-             DataContext="{Binding Path=Main, Source={StaticResource Locator}}">
+﻿<UserControl 
+  x:Class="Microsoft.Samples.VisualStudio.IDE.ToolWindow.WorkspacePaneControl"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+  xmlns:vm="clr-namespace:Microsoft.Samples.VisualStudio.IDE.ToolWindow.ViewModel"
+  xmlns:vsp="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
+  mc:Ignorable="d" 
+  d:DesignHeight="300" d:DesignWidth="300"
+  DataContext="{Binding Path=Main, Source={StaticResource Locator}}">
 
   <UserControl.Resources>
-    <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
-    <HierarchicalDataTemplate ItemsSource="{Binding Courses}" DataType="{x:Type vm:Department}">
-      <Label Content="{Binding DepartmentName}"/>
-    </HierarchicalDataTemplate>
+    <ResourceDictionary>
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+      <HierarchicalDataTemplate ItemsSource="{Binding Courses}" DataType="{x:Type vm:Department}">
+        <Label Content="{Binding DepartmentName}"/>
+      </HierarchicalDataTemplate>
 
-    <HierarchicalDataTemplate ItemsSource="{Binding Books}" DataType="{x:Type vm:Course}">
-      <Label Content="{Binding CourseName}"/>
-    </HierarchicalDataTemplate>
+      <HierarchicalDataTemplate ItemsSource="{Binding Books}" DataType="{x:Type vm:Course}">
+        <Label Content="{Binding CourseName}"/>
+      </HierarchicalDataTemplate>
 
-    <DataTemplate DataType="{x:Type vm:Book}">
-      <Label Content="{Binding BookName}"/>
-    </DataTemplate>
+      <DataTemplate DataType="{x:Type vm:Book}">
+        <Label Content="{Binding BookName}"/>
+      </DataTemplate>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Style/TreeViewStyle.xaml"></ResourceDictionary>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
   </UserControl.Resources>
 
   <Grid>
@@ -29,11 +36,42 @@
       <RowDefinition Height="50*"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
+    <TextBlock 
+      HorizontalAlignment="Center" VerticalAlignment="Center" 
+      Margin="1,1,1,1"
+    >
+      <TextBlock.Style>
+        <Style TargetType="TextBlock">
+          <Setter Property="Visibility" Value="Hidden" />
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding Path=Workspace.State}" Value="Unloaded">
+              <Setter Property="Visibility" Value="Visible" />
+              <Setter Property="Text" Value="Workspace unloaded" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Path=Workspace.State}" Value="Loading">
+              <Setter Property="Visibility" Value="Visible" />
+              <Setter Property="Text" Value="Workspace loading..." />
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </TextBlock.Style>
+    </TextBlock>
     <TreeView 
       HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
-      Margin="1,1,1,1" 
-      ItemsSource="{Binding Mode=OneWay, Path=Departments}"
-    />
+      Margin="1,1,1,1"
+      ItemsSource="{Binding Mode=OneWay, Path=Workspace.Departments}"
+    >
+      <TreeView.Style>
+        <Style TargetType="TreeView">
+          <Setter Property="Visibility" Value="Hidden" />
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding Path=Workspace.State}" Value="Loaded">
+              <Setter Property="Visibility" Value="Visible" />
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </TreeView.Style>
+    </TreeView>
     <TextBox 
       Grid.Row="1" 
       HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
@@ -46,21 +84,21 @@
       HorizontalAlignment="Center" VerticalAlignment="Center" 
       Margin="1,1,1,1" 
       Width="75"
-      Command="{Binding EnableDisableWorkspace}" 
+      Command="{Binding LoadUnloadWorkspace}" 
     >
       <Button.Style>
         <Style TargetType="Button">
+          <Setter Property="Content" Value="Enable" />
           <Style.Triggers>
-            <DataTrigger Binding="{Binding Path=State}" Value="Initialized">
+            <DataTrigger Binding="{Binding Path=Workspace.State}" Value="Loaded">
               <Setter Property="Content" Value="Disable" />
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=State}" Value="Uninitialized">
+            <DataTrigger Binding="{Binding Path=Workspace.State}" Value="Unloaded">
               <Setter Property="Content" Value="Enable" />
             </DataTrigger>
           </Style.Triggers>
         </Style>
       </Button.Style>
     </Button>
-
   </Grid>
 </UserControl>
