--- a/incr/package/WorkspacePaneControl.xaml
+++ b/incr/package/WorkspacePaneControl.xaml
@@ -14,16 +14,12 @@
     <ResourceDictionary>
       <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
 
-      <HierarchicalDataTemplate ItemsSource="{Binding Children}" DataType="{x:Type vm:Project}">
-        <TextBlock Text="{Binding Name}"/>
+      <HierarchicalDataTemplate ItemsSource="{Binding Children}" DataType="{x:Type vm:ProjectViewModel}">
+        <TextBlock Text="{Binding FullName}"/>
       </HierarchicalDataTemplate>
 
-      <!--<HierarchicalDataTemplate ItemsSource="{Binding ProjectItems}" DataType="{x:Type vm:Project}">
-        <TextBlock Text="{Binding Name}"/>
-      </HierarchicalDataTemplate>-->
-
-      <DataTemplate DataType="{x:Type vm:ProjectItem}">
-        <TextBlock Text="{Binding Name}"/>
+      <DataTemplate DataType="{x:Type vm:ProjectChildBaseViewModel}">
+        <TextBlock Text="{Binding FullName}"/>
       </DataTemplate>
 
       <ResourceDictionary.MergedDictionaries>
@@ -65,7 +61,7 @@
     >
       <TreeView.ItemContainerStyle>
         <Style TargetType="{x:Type TreeViewItem}">
-          <Setter Property="IsExpanded" Value="True"/>
+          <Setter Property="IsExpanded" Value="False"/>
         </Style>
       </TreeView.ItemContainerStyle>
       <TreeView.Style>
